# -new-java-workspace

nse_scanner/: CMakeLists.txt  README.md
nse_scanner/include/: bhavcopy_downloader.hpp  bullish_scanner.hpp  candle.hpp  candlestick_detector.hpp
nse_scanner/python/: bhavcopy_download.py  report_bullish.py
nse_scanner/src/: bhavcopy_downloader.cpp  bullish_scanner.cpp  candlestick_detector.cpp  main.cpp
